# zoldak

./: .gitignore  CMakeLists.txt  Doxyfile  README.md  coding-style.cpp
data-wip/: ammo.blend  grenade.blend
data/levels/: multilayer.zvl  multilayer2.zvl  multilayerQ.zvl
data/shaders/: fov-mask-apply.fsh  fov-mask.fsh  fov-mask.vsh
src/: CMakeLists.txt
src/ManyMouse/: CMakeLists.txt
src/ZkCommon/: CMakeLists.txt  Constants.cpp  Constants.h  Constants.hpp  Level.cpp  Level.h  Level.hpp  LibraryCast.h  Powerups.hpp
src/ZkGame/: CMakeLists.txt  Camera.cpp  Camera.h  Camera.hpp  Common.h  Entity.cpp  Entity.h  Game.cpp  Game.h  Game.hpp  GameSystem.cpp  GameSystem.h  GameSystem.hpp  InputSystem.cpp  InputSystem.h  InputSystem.hpp  Physics.cpp  Physics.h  Physics.hpp  Player.cpp  Player.h  Player.hpp  PlayerEntity.cpp  PlayerUI.cpp  PlayerUI.h  PlayerUI.hpp  PlayerUILayout.cpp  PlayerUILayout.hpp  Renderable.h  SpawnerMesh.cpp  SpawnerMesh.h  SpawnerMesh.hpp  TextureCache.cpp  TextureCache.h  TextureCache.hpp  main.cpp  win-res.rc
src/ZkGame/Config/: Config.cpp  Config.h  Config.hpp  GraphicsConfig.cpp  GraphicsConfig.h  InputAction.cpp  InputAction.h  InputAction.hpp  InputConfig.cpp  InputConfig.h  InputConfig.hpp  PlayerAction.cpp  PlayerAction.h  PlayerAction.hpp  SettingsConfig.cpp  SettingsConfig.hpp
src/ZkGame/Entities/: BulletEntity.cpp  BulletEntity.h  BulletEntity.hpp  CrateEntity.cpp  CrateEntity.h  CrateEntity.hpp  CrosshairEntity.cpp  CrosshairEntity.h  CrosshairEntity.hpp  Entity.cpp  Entity.h  Entity.hpp  GrenadeEntity.cpp  GrenadeEntity.h  GrenadeEntity.hpp  GrenadePackEntity.cpp  GrenadePackEntity.h  GrenadePackEntity.hpp  LevelMeshEntity.cpp  LevelMeshEntity.h  LevelMeshEntity.hpp  MedKitEntity.cpp  MedKitEntity.h  MedKitEntity.hpp  MouseTrackEntity.cpp  MouseTrackEntity.h  PlayerEntity.cpp  PlayerEntity.h  PlayerEntity.hpp  PlayerTrackEntity.cpp  PlayerTrackEntity.h  PlayerTrackEntity.hpp  QuadDamageEntity.cpp  QuadDamageEntity.hpp  SpawnerMeshEntity.cpp  SpawnerMeshEntity.h  SpawnerMeshEntity.hpp
src/ZkGame/Lobby/: GraphicsTab.cpp  GraphicsTab.h  GraphicsTab.hpp  InputChoiceDialog.cpp  InputChoiceDialog.h  InputChoiceDialog.hpp  InputTab.cpp  InputTab.h  InputTab.hpp  LobbyWindow.cpp  LobbyWindow.h  LobbyWindow.hpp  MouseChoiceDialog.cpp  MouseChoiceDialog.h  MouseChoiceDialog.hpp  PlayTab.cpp  PlayTab.h  PlayTab.hpp  SettingsTab.cpp  SettingsTab.hpp
src/ZkGame/Renderables/: BoxRenderable.cpp  BoxRenderable.h  BoxRenderable.hpp  BulletRenderable.cpp  BulletRenderable.h  BulletRenderable.hpp  CrosshairRenderable.cpp  CrosshairRenderable.h  CrosshairRenderable.hpp  MeshRenderable.cpp  MeshRenderable.h  MeshRenderable.hpp  Renderable.h  Renderable.hpp  SpriteRenderable.cpp  SpriteRenderable.h  SpriteRenderable.hpp
src/ZkGame/Renderables/GraphicsLayers/: ContainerGraphicsLayer.cpp  ContainerGraphicsLayer.hpp  FovGraphicsLayer.cpp  FovGraphicsLayer.hpp  GraphicsLayer.cpp  GraphicsLayer.hpp
src/ZkGame/Weapons/: Weapon.cpp  Weapon.h  Weapon.hpp  WeaponDef.cpp  WeaponDef.h
src/ZkLevelEditor/: BackgroundItem.cpp  BackgroundItem.h  CMakeLists.txt  ColorBox.cpp  ColorBox.h  ColorBox.hpp  ColorPaletteWidget.cpp  ColorPaletteWidget.h  Common.h  EditState.h  LevelView.cpp  LevelView.h  LevelView.hpp  MainWindow.cpp  MainWindow.h  MainWindow.hpp  MeshLayer.cpp  MeshLayer.h  MeshLayer.hpp  MeshTriangle.cpp  MeshTriangle.h  MeshTriangleEdge.cpp  MeshTriangleEdge.h  MeshTriangleNode.cpp  MeshTriangleNode.h  TriangleNode.cpp  TriangleNode.h  main.cpp
